--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "start": "node app.js"
+  "scripts": 
+  {
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
