--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "type": "module",
-  "scripts": 
-  {
+  "scripts": {
     "start": "node server.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -19,7 +21,6 @@
     "jsx": "^0.9.89",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "node": "^22.2.0",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
