--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js"
+    "postinstall": "npm rebuild bcrypt --build-from-source"
   },
   "engines": {
     "node": "18.x"
